[package]
name = "blight_os"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader  = {version = "0.9.8", features = ["map_physical_memory"]}
lazy_static = {version = "1.0",   features = ["spin_no_std"]}
num         = {version = "0.4",   default-features = false}
num-traits  = {version = "0.2",   default-features = false}
crossbeam-queue = { version = "0.2.1", default-features = false, features = ["alloc"] }
conquer-once = { version = "0.2.0", default-features = false }
futures-util = {version = "0.3.4", default-features = false, features= ["alloc"]}
volatile    = "0.2.6"
spin        = "0.5.2"
x86_64      = "0.14.2"
uart_16550  = "0.2.0"
pic8259     = "0.10.1"
num-derive  = "0.3"
linked_list_allocator = "0.9.0"


[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 150


# [profile.dev]
# panic = "abort"

[profile.release]
panic = "abort"


[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
